err/irlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/irlib'...
Compiling './lib/python3.5/site-packages/irlib/classifier.py'...
***   File "./lib/python3.5/site-packages/irlib/classifier.py", line 80
    print "\nInitialization for fold %d done!" % int(fold)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irlib/configuration.py'...
***   File "./lib/python3.5/site-packages/irlib/configuration.py", line 72
    print item, self.configuration[item]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irlib/matrix.py'...
***   File "./lib/python3.5/site-packages/irlib/matrix.py", line 216
    print self.classes
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irlib/metrics.py'...
***   File "./lib/python3.5/site-packages/irlib/metrics.py", line 17
    print len(a), '!=', len(b)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/irlib/preprocessor.py'...
***   File "./lib/python3.5/site-packages/irlib/preprocessor.py", line 20
    print '[!] Warning: NLTK is not installed on system'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/irlib/superlist.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (superlist.py, line 70)
Listing './lib/python3.5/site-packages/irlib-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
